@@ -13,11 +13,12 @@ Job: "ttH2015"
   Lumi: 84.9676
 %   LumiScale: 10    % use this to scale `on the fly' (i.e. after option "n" or "h") MC samples - e.g. for fast projections
   Selection: "trigger>0 && (e_jets || mu_jets)"
-  PlotOptions: "YIELDS"
+%   PlotOptions: "YIELDS"
+  PlotOptions: "NOSIG,OVERSIG"
   NtupleName: "nominal"
   DebugLevel: 0
 %   MCstatThreshold: 0.10
-%   SystControlPlots: TRUE
+  SystControlPlots: TRUE
   SystPruningShape: 0.01
   SystPruningNorm: 0.01
 %   CorrelationThreshold: 0.20
@@ -34,7 +35,7 @@ Fit: "fit"
   FitRegion: CRSR
 %   StatOnly: TRUE
 %   FitBlind: TRUE
-  StatOnly: TRUE
+%   StatOnly: TRUE
 
 % --------------- %
 % ---  LIMIT    --- %
@@ -97,17 +98,17 @@ Sample: "ttH"
   Regions: "HThad_ge6jge4b","HThad_5j3b"
 
 % Example GHOST sample, used for syst ReferenceSample option
-Sample: "ttbar_pyt6"
-  Type: GHOST
-  NtupleFile: "ttbar"
+% Sample: "ttbar_pyt8"
+%   Type: GHOST
+%   NtupleFile: "ttbar_pyt8"
 
 Sample: "ttbar"
   Type: BACKGROUND
   Title: "t#bar{t} + jets"
   FillColor: 0
   LineColor: 1
-  NtupleFile: "ttbar_pyt8"
-%   NtupleFile: "ttbar"
+%   NtupleFile: "ttbar_pyt8"
+  NtupleFile: "ttbar"
   
 % Sample: "wjets"
 %   Type: BACKGROUND
@@ -264,9 +265,10 @@ Systematic: "tt_Rad_HiLow"
   Title: "t#bar{t} Radiation"
   Type: HISTO
   Samples: ttbar
+  Regions: HThad_5j3b,HThad_ge6jge4b
   NtupleFileSufUp: "_radHi"
   NtupleFileSufDown: "_radLo"
-  ReferenceSample: ttbar_pyt6
+%   ReferenceSample: ttbar_pyt8
   Smoothing: 40
   Symmetrisation: TWOSIDED
 
